2007-11-19  Julien Chaffraix  <julien.chaffraix@gmail.com>

Reviewed by Darin.

        http://bugs.webkit.org/show_bug.cgi?id=12194
        Bug 12194: Trying to access XMLHttpRequest.responseText or responseXML when they
        are not available should raise an exception

        Tests: http/tests/xmlhttprequest/xmlhttprequest-responseText-exception.html
               http/tests/xmlhttprequest/xmlhttprequest-responseXML-exception.html

        * bindings/js/JSXMLHttpRequest.cpp:
        (KJS::JSXMLHttpRequest::getValueProperty):
        * xml/XMLHttpRequest.cpp:
        (WebCore::XMLHttpRequest::getResponseText):
        (WebCore::XMLHttpRequest::getResponseXML):
        * xml/XMLHttpRequest.h:

2007-11-19  Julien Chaffraix  <julien.chaffraix@gmail.com>

        Reviewed by Darin.

        http://bugs.webkit.org/show_bug.cgi?id=12194
        Bug 12194: Trying to access XMLHttpRequest.responseText or responseXML when they are not
        available should raise an exception

        * http/tests/xmlhttprequest/xmlhttprequest-responseText-exception-expected.txt: Added.
        * http/tests/xmlhttprequest/xmlhttprequest-responseText-exception.html: Added.
        * http/tests/xmlhttprequest/xmlhttprequest-responseXML-exception-expected.txt: Added.
        * http/tests/xmlhttprequest/xmlhttprequest-responseXML-exception.html: Added.
        * http/tests/xmlhttprequest/zero-length-response-expected.txt: Updated result
        * http/tests/xmlhttprequest/zero-length-response-sync-expected.txt: Updated result
        * http/tests/xmlhttprequest/zero-length-response-sync.html: Corrected URL & added
        exception handling to test case


Canonical link: https://commits.webkit.org/21817@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@27898 268f45cc-cd09-0410-ab3c-d52691b4dbfc