WebCore/xml/XMLHttpRequest.h
@@ -82,8 +82,8 @@ public:
     void overrideMIMEType(const String& override);
     String getAllResponseHeaders(ExceptionCode&) const;
     String getResponseHeader(const String& name, ExceptionCode&) const;
-    const KJS::UString& getResponseText() const;
-    Document* getResponseXML() const;
+    const KJS::UString& getResponseText(ExceptionCode&) const;
+    Document* getResponseXML(ExceptionCode&) const;
 
     void setOnReadyStateChangeListener(EventListener*);
     EventListener* onReadyStateChangeListener() const;
